[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 32.0
rect_scale = Vector2( 2, 2 )
bbcode_enabled = true
text = "Steps to reproduce:

1. Click \"Set 100 Lines\", and it will use set_bbcode() to
print 100 lines with \"wave\" effect. The debug console
will output: 101

2. Click \"Append 10 Lines\" and scroll to bottom, you
will see 10 lines with \"shake\" effect. The debug console
will output numbers from 110~101

3. Click \"Clear\" to clear all output.

4. Click \"Get + Set 10 Lines\" and BOOM! All lines are back! But only those lines created by set_bbcode().

5. Click \"Get + Set\" several times, and you will see the numbers in output become abnormal. These are return value from get_line_count() function. And you will see the numbers goes over 110. There are probably some extra lines hold in memory, indicating possible memory leak.

6. If you don't click \"Clear\" in step 3, you will see the get_bbcode() function ignores the string created by append_bbcode(), but append_bbcode() will actually append it's content in the end."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Set10" type="Button" parent="."]
margin_left = 772.0
margin_top = 41.0
margin_right = 939.0
margin_bottom = 82.0
text = "Set 100 Lines"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="App10" type="Button" parent="."]
margin_left = 772.0
margin_top = 113.0
margin_right = 939.0
margin_bottom = 154.0
text = "Append 10 Lines"

[node name="GetSet10" type="Button" parent="."]
margin_left = 774.122
margin_top = 259.205
margin_right = 941.122
margin_bottom = 300.205
text = "Get + Set 10 Lines"

[node name="Clear" type="Button" parent="."]
margin_left = 774.245
margin_top = 188.162
margin_right = 941.245
margin_bottom = 229.162
text = "Clear"

[connection signal="pressed" from="Set10" to="." method="_on_Set100_pressed"]
[connection signal="pressed" from="App10" to="." method="_on_App10_pressed"]
[connection signal="pressed" from="GetSet10" to="." method="_on_GetSet10_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
